--- a/index.html
+++ b/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Instagram</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="instagram-wrapper">
+    <div class="instagram-inicio">
         <div class="instagram-phone">
-            <img src="./img/instagram-celular.png" alt="celular">
+            <img src="img/instagram-celular.png" alt="celular com tela do instagram">
         </div>
         <div class="instagram-continue">
             <div class="group">
-                <img src="./img/instagram-logo.png" class="instagram-logo" alt="instagram logo">
-                <div class="profile-photo">
-                    <img src="./img/perfil-instagram.jpg" alt="foto de perfil">
+                <img src="img/instagram-logo.png" class="instagram-logo" alt="logo">
+                <div class="photo">
+                    <img src="img/perfil-instagram.jpg" alt="foto de perfil">
                 </div>
-                <a href="#" class="instagram-login">Continue como sprucegabriela</a>
-                <a href="#" class="instagram-logout">Remover conta</a>
+                <a href="#" class="instagram-login"> Continue como twoliana</a>
+                <a href="#" class="instagram-logout"> Remover conta</a>
             </div>
             <div class="group">
-                <p class="not-account">Não é sprucegabriela?</p>
+                <p class="not-account"> Não é twoliana</p>
                 <p class="not-account">
-                    <span class="link-blue">Alternar contas</span>
+                    <span class="link-blue">Alternar conta</span>
                     ou
                     <span class="link-blue">Inscreva-se</span>
                 </p>
@@ -36,6 +37,7 @@
                 </div>
             </div>
         </div>
+
     </div>
 </body>
 </html>
